# SLFGenerator

./: .gitignore  README.md  pytest.ini  requirements.txt  setup.cfg  slf.py  slf_gui.py  slf_no_gui.py  slf_toolbox.drawio  slf_v0.1.py
Database/: Case1_Correlated.pkl  Case1_Independent.pkl  Correlated_Correlated.pkl  Correlated_ignoring_independence_Independent.pkl
cache/: Project 1_Independent.pickle
client/: Database.xlsx  component_data.csv  component_data1.csv  component_data2.csv  correlation_tree.csv  correlation_tree1.csv  correlation_tree2.csv  school_corr.csv  school_inventory.csv
sample/: correlations.csv  inventory.csv  pfa_corr.csv  pfa_inv.csv  slf.json
sample/Shahnazaryan et al. 2020/: ancona_dir1_st1_psd.csv  ancona_dir1_st2_psd.csv  ancona_fl4_pfa.csv  ancona_st3_psd.csv
sample/Shahnazaryan et al. 2021/: ancona_dir1_st1_psd.csv  ancona_dir1_st3_psd.csv  ancona_dir2_st1_psd.csv  ancona_dir2_st2_psd.csv  ancona_dir2_st3_psd.csv  ancona_fl1_pfa.csv  ancona_fl2_pfa.csv  ancona_fl3_pfa.csv  ancona_st1_psd.csv  ancona_st2_psd.csv
src/: __init__.py  slf.py  slf_gui.py
storeyloss/: __init__.py  models.py  slf.py  slf_gui.py
tests/: test_slf.py
tools/: slf.py  slf_function_gui.py  viz.py
