[metadata]
name = storeyloss
version = 1.1.0
description = Storey-loss function generator to be used in loss assessment.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/davitshahnazaryan3/SLFGenerator
author = Davit Shahnazaryan
author_email = shahnazaryandavit1@gmail.com
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/davitshahnazaryan3/SLFGenerator/issues

[options]
packages = find:
install_requires =
    numpy~=1.20.2
    pandas~=1.2.4
    scipy~=1.5.2
    pillow~=8.3.2
    future~=0.18.2
    matplotlib~=3.3.2
    pydantic~=1.10.4

python_requires = >=3.9

[options.packages.find]
where=src
exclude =
    tests*
    testing*

[options.extras_require]
dev =
    pytest~=7.4.0
    flake8~=6.1.0
    
[flake8]
exclude = 
    tests/
    sample/
    **/__init__.py
max-line-length = 79
ignore = 
    F403
    F405
    W503